@@ -4,8 +4,8 @@ include(CheckIncludeFile)
 
 set(CMAKE_VERBOSE_MAKEFILE 1) 
 set(GDB 1 CACHE BOOL "debugging or not")
-set(OPENMP 0 BOOL "Openmp use")
-set(USE_MUMPS 1 BOOL "MUMPS use")
+set(OPENMP 0 CACHE BOOL "Openmp use")
+set(USE_MUMPS 0 CACHE BOOL "MUMPS use")
 
 # For which compilers we shall search (if none found then the 
 # default cmake compiler detection will be invoked. 
