@@ -84,7 +84,7 @@
 # If you want to specify the path to MUMPS, uncomment the next line
 # and give the correct path to MUMPS here. For example:
 #
-# mumps_dir="/opt/MUMPS_4.10.0.ifort"
+# mumps_dir="/dir/to/MUMPS"
 #
 ####################  User Defined Compiler Flags  #####################
 cflags="-funroll-loops"
